[gd_scene load_steps=9 format=3 uid="uid://bcxdvv4qwwmqm"]

[ext_resource type="Script" path="res://scripts/SimonsSays/SimonSays.gd" id="1_cv4a7"]
[ext_resource type="Script" path="res://scripts/SimonsSays/ResetButton.gd" id="2_0g5ji"]
[ext_resource type="Theme" uid="uid://bj6ltbgw537xh" path="res://themes/SimonSays/button.tres" id="2_0o021"]
[ext_resource type="Script" path="res://scripts/SimonsSays/View_High_Scores.gd" id="3_va0cs"]
[ext_resource type="Script" path="res://scripts/SimonsSays/HighScorePopup.gd" id="4_fax66"]
[ext_resource type="Theme" uid="uid://0knrve0pfa03" path="res://themes/SimonSays/label.tres" id="4_ya7h2"]
[ext_resource type="AudioStream" uid="uid://ctrnbl5q2voss" path="res://sounds/SimonSays/aww.wav" id="23_yd87t"]

[sub_resource type="LabelSettings" id="LabelSettings_spgrt"]
font_color = Color(0, 0, 0, 1)

[node name="SimonSaysGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cv4a7")

[node name="Background" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="Play_Area" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -368.0
offset_right = 320.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4, 0.6, 0.607843, 1)

[node name="PlaybackTimer" type="Timer" parent="."]
wait_time = 1.25

[node name="Play_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 1088.0
offset_right = 168.0
offset_bottom = 1216.0
theme = ExtResource("2_0o021")
text = "Play"

[node name="Reset_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 384.0
offset_top = 1088.0
offset_right = 512.0
offset_bottom = 1216.0
theme = ExtResource("2_0o021")
text = "Reset"
script = ExtResource("2_0g5ji")

[node name="View_High_Scores" type="Button" parent="."]
layout_mode = 0
offset_left = 552.0
offset_top = 1088.0
offset_right = 680.0
offset_bottom = 1216.0
theme = ExtResource("2_0o021")
text = "High Scores"
script = ExtResource("3_va0cs")

[node name="TEST" type="Button" parent="."]
layout_mode = 0
offset_left = 208.0
offset_top = 1088.0
offset_right = 336.0
offset_bottom = 1216.0
theme = ExtResource("2_0o021")
text = "TEST"

[node name="GameStatus" type="Label" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 832.0
offset_right = 320.0
offset_bottom = 896.0
theme = ExtResource("4_ya7h2")
text = "Not Loaded"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 552.0
offset_top = 832.0
offset_right = 680.0
offset_bottom = 896.0
theme = ExtResource("4_ya7h2")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 832.0
offset_right = 528.0
offset_bottom = 896.0
theme = ExtResource("4_ya7h2")
text = "Game Score:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameStatus_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 832.0
offset_right = 168.0
offset_bottom = 896.0
theme = ExtResource("4_ya7h2")
text = "Game Status:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Initials_Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 40.0
offset_top = 160.0
offset_right = 168.0
offset_bottom = 224.0
theme = ExtResource("4_ya7h2")
text = "Initials:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Initials" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 192.0
offset_top = 160.0
offset_right = 320.0
offset_bottom = 224.0
theme = ExtResource("4_ya7h2")
text = "JLH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Aww_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_yd87t")

[node name="HighScorePopup" type="PopupPanel" parent="."]
position = Vector2i(40, 272)
size = Vector2i(640, 512)
unresizable = false
always_on_top = true
script = ExtResource("4_fax66")

[node name="HighScoreTitle" type="Label" parent="HighScorePopup"]
visible = false
offset_left = 4.0
offset_top = 4.0
offset_right = 636.0
offset_bottom = 508.0
text = "High Scores:"
label_settings = SubResource("LabelSettings_spgrt")
autowrap_mode = 1

[node name="ColorRect" type="ColorRect" parent="HighScorePopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 636.0
offset_bottom = 508.0
color = Color(0.4, 0.6, 0.607843, 1)

[node name="ItemList" type="ItemList" parent="HighScorePopup/ColorRect"]
layout_mode = 0
offset_right = 632.0
offset_bottom = 504.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
select_mode = 1
max_text_lines = 20
same_column_width = true

[connection signal="timeout" from="PlaybackTimer" to="." method="_on_playback_timer_timeout"]
[connection signal="pressed" from="Play_Button" to="." method="_play_button_pressed"]
[connection signal="reset_button_pressed" from="Reset_Button" to="." method="_on_reset_button_reset_button_pressed"]
[connection signal="pressed" from="View_High_Scores" to="HighScorePopup" method="_on_view_high_scores_pressed"]
[connection signal="pressed" from="TEST" to="." method="_on_test_pressed"]
[connection signal="focus_exited" from="HighScorePopup" to="HighScorePopup" method="_on_focus_exited"]
